--- a/index.html
+++ b/index.html
@@ -9,6 +9,25 @@
 <body>
 
     <header>
+       
+  <header class="navbar">
+    <nav class="nav">
+        <ul>
+            <li class="name" ><p >LOGO</p ></li>
+            <li><button class="button-style ">Sign Up</button></li>
+        </ul>
+    </nav>
+
+    <div class="banner">
+        <h1 class="banner-title">Cool Dark UI Template for Webflow Agencies!</h1>
+        <button class="button-style ">Stay Focused</button>
+
+    </div>
+
+    
+  
+
+
 
     </header>
 
