--- a/index.html
+++ b/index.html
@@ -32,6 +32,19 @@
     </header>
 
     <main>
+        <section class="box-1">
+            <div class="box">
+                <h3 class="title">See It in Action</h3>
+                <p class="box-description">Explore the live preview and imagine your<br> brand in this bold new look.</p>
+                <button class="button-style">Launch Live Preview</button>
+            </div>
+            <div class="picture">
+                <img class="picture" src="Assets/wc-mini.png" alt="">
+            </div>
+
+        </section>
+
+       
 
     </main>
 
