secation boxmodel-2 connected to my repository

--- a/index.html
+++ b/index.html
@@ -44,7 +44,28 @@
 
         </section>
 
-       
+        <section class="box-2">
+           <div class="box2">
+                <h2>Joined Thousands of Productive Users</h2>
+           <div class="items">
+           <div class="start-item">
+                 <h3>50K</h3>
+                 <p class="description">Active Users</p>
+           </div>
+           <div class="start-item">
+                <h3>2M+</h3>
+                <p class="description">Focus Sessions</p>
+           </div>
+          <div class="start-item">
+                 <h3>95%</h3>
+                 <p class="description">Satisfaction Rate</p>
+             </div>
+           </div>
+         </div>
+  </section>
+
+
+  
 
     </main>
 
