section box-model -3 user feed option added now my repositoory

--- a/index.html
+++ b/index.html
@@ -65,7 +65,72 @@
   </section>
 
 
-  
+  <!--  Section  box model-3-->
+ <section class="box-3">
+  <h2>What our users say</h2>
+  <div class="box-container">
+  <div class="box3">
+      <div class="stars">
+        <img src="Assets/icon-star.png" alt="star">
+        <img src="Assets/icon-star.png" alt="star">
+        <img src="Assets/icon-star.png" alt="star">
+        <img src="Assets/icon-star.png" alt="star">
+        <img src="Assets/icon-star.png" alt="star">
+      </div>
+      <h3>Loved by Designers</h3>
+      <p>This template instantly leveled up our <br>presence.” - Studio Vertex</p>
+      <div class="reviewer">
+        <img src="Assets/smart .jpg" alt="Reviewer" class="reviewer-img">
+        <div>
+          <p class="name">Md Mahim Hosen</p>
+          <p class="date">2025-11-07</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Duplicate the card as needed -->
+    <div class="box3">
+      <div class="stars">
+        <img src="Assets/icon-star.png" alt="star">
+        <img src="Assets/icon-star.png" alt="star">
+        <img src="Assets/icon-star.png" alt="star">
+        <img src="Assets/icon-star.png" alt="star">
+        <img src="Assets/icon-star.png" alt="star">
+        
+      </div>
+      <h3>Loved by Designers</h3>
+      <p>This template instantly leveled up our<br> presence.” - Studio Vertex</p>
+      <div class="reviewer">
+        <img src="Assets/jhankar.png" alt="Reviewer" class="reviewer-img">
+        <div>
+          <p class="name">Md Jhankar Mahabub</p>
+          <p class="date">2025-05-07</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="box3">
+      <div class="stars">
+        <img src="Assets/icon-star.png" alt="star">
+        <img src="Assets/icon-star.png" alt="star">
+        <img src="Assets/icon-star.png" alt="star">
+        <img src="Assets/icon-star.png" alt="star">
+        <img src="Assets/icon-star.png" alt="star">
+       
+      </div>
+      <h3>Loved by Designers</h3>
+      <p>This template instantly leveled up our <br> presence.” -  Studio Vertex</p>
+      <div class="reviewer">
+        <img src="Assets/zihad.png" alt="Reviewer" class="reviewer-img">
+        <div>
+          <p class="name">Md Ferdaous Zihad</p>
+          <p class="date">2025-01-07</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 
     </main>
 
