section box-model -4 connected to my repository

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </header>
 
     <main>
-        <section class="box-1">
+        <section class="box-1 container">
             <div class="box">
                 <h3 class="title">See It in Action</h3>
                 <p class="box-description">Explore the live preview and imagine your<br> brand in this bold new look.</p>
@@ -44,7 +44,7 @@
 
         </section>
 
-        <section class="box-2">
+        <section class="box-2 container">
            <div class="box2">
                 <h2>Joined Thousands of Productive Users</h2>
            <div class="items">
@@ -66,7 +66,7 @@
 
 
   <!--  Section  box model-3-->
- <section class="box-3">
+ <section class="box-3 container">
   <h2>What our users say</h2>
   <div class="box-container">
   <div class="box3">
@@ -88,8 +88,8 @@
       </div>
     </div>
 
-    <!-- Duplicate the card as needed -->
-    <div class="box3">
+
+    <div class="box3 ">
       <div class="stars">
         <img src="Assets/icon-star.png" alt="star">
         <img src="Assets/icon-star.png" alt="star">
@@ -131,12 +131,56 @@
   </div>
 </section>
 
+<section class="box-4 container">
+    <div class="box4">
+        <h1>Ready to focus better</h1>
+        <p>This template instantly leveled up our presence.” - Studio Vertex</p>
+        <button class="button-style">Ger Started Free</button>
+    </div>
+    <img class="image" src="Assets/wc-big.png" alt="This is a picture">
+</section>
+<!-- last box model section -->
+ 
+<section class="contact-section">
+  <div class="contact-container">
+    <div class="contact-text">
+      <h2 class="contact-title">Let's Get in Touch</h2>
+    </div>
+    <form class="contact-form" action="#">
+      <label>Email</label>
+      <input type="email" placeholder="example@email.com" required>
 
-    </main>
+      <label>Name</label>
+      <input type="text" placeholder="full name" required>
 
-    <footer>
+      <label>Message</label>
+      <textarea placeholder="write your message...." rows="4" required></textarea>
 
-    </footer>
+      <button class="button-style" type="submit">Get in Touch</button>
+    </form>
+  </div>
+</section>
+</main>
+
+<footer class="footer">
+  <h2 class="logo">LOGO</h2>
+  <p class="footer-description">
+    Ready to elevate your online presence? Contact us today to discuss <br>
+    your project and discover how we can bring your vision to life.
+  </p>
+  <div class="footer-nav">
+    <a href="#">Home</a>
+    <a href="#">About</a>
+    <a href="#">How it Works</a>
+    <a href="#">Services</a>
+  </div>
+</footer>
+
+
+
+
+
+    
     
 </body>
 </html>
